# cranelift-py

./: Cargo.toml  README.md  cranelift.pyi  pyproject.toml
example/: example.py
src/: entities.rs  jit.rs  lib.rs  object.rs
src/codegen/: ir.rs  isa.rs  mod.rs
