[project]
name = "cranelift-py"

classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Compilers",
]
dynamic = ["version"]
requires-python = ">=3.8"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.8,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
